fix jpg file links

--- a/countrysquire.html
+++ b/countrysquire.html
@@ -23,18 +23,18 @@
 <p align="center"><img border="0" src="img/ford1.jpg" width="370" height="291">
 <img border="0" src="img/ford7.jpg" width="420" height="227"></p>
 <p align="center"><img border="0" src="img/ford3.jpg" width="418" height="314">
-<img border="0" src="img/DSCF0051.JPG" width="413" height="314"></p>
+<img border="0" src="img/DSCF0051.jpg" width="413" height="314"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>This will be turned into a custom air
     suspension lowrider looking exactly like this</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/greenwagon.JPG" width="600" height="160"></p>
+<p align="center"><img border="0" src="img/greenwagon.jpg" width="600" height="160"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>This has been a frame off restoration</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/newframe2.JPG" width="538" height="402"></p>
+<p align="center"><img border="0" src="img/newframe2.jpg" width="538" height="402"></p>
 <p align="center"><font face="Arial" size="6">Click <a href="http://www.crownvic.net/ubbthreads/ubbthreads.php?ubb=showflat&amp;Number=1872395#Post1872395">HERE</a>
 for the crownvic.net forum for up to date intimate details of the build</font></p>
 
