--- a/lincolnmark8.html
+++ b/lincolnmark8.html
@@ -16,7 +16,7 @@
 <hr width="80%" noshade size="6" color="#FF0000">
 
 <p align="center"><img border="0" src="img/ebayad1.jpg" width="320" height="242">
-<img border="0" src="img/29sept20112.JPG" width="320" height="242"></p>
+<img border="0" src="img/29sept20112.jpg" width="320" height="242"></p>
 <p align="center"><font face="Arial"><b>This is the story of my Lincoln Mark 8.</b></font></p>
 <p align="center"><font face="Arial"><b>Spotted on ebay with the listing ending
 on my birthday! (8th feb).</b></font></p>
@@ -30,8 +30,8 @@ on my birthday! (8th feb).</b></font></p>
     Can't have this because its supposed to be a project!</b></font></li>
   <li><font face="Arial"><b>Back home</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/athome1.JPG" width="370" height="278">
-<img border="0" src="img/29sept20112.JPG" width="366" height="278"></p>
+<p align="center"><img border="0" src="img/athome1.jpg" width="370" height="278">
+<img border="0" src="img/29sept20112.jpg" width="366" height="278"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>Jobs done so far:</b></font></li>
@@ -39,52 +39,52 @@ on my birthday! (8th feb).</b></font></p>
 <blockquote>
   <p align="left"><font face="Arial"><b>Rear neon light replaced for one in a
   lot better condition</b></font></p>
-  <p align="left"><img border="0" src="img/newneonlght2.JPG" width="368" height="273">
-  <img border="0" src="img/noneonbootlid2.JPG" width="363" height="277"></p>
+  <p align="left"><img border="0" src="img/newneonlght2.jpg" width="368" height="273">
+  <img border="0" src="img/noneonbootlid2.jpg" width="363" height="277"></p>
   <p align="left"><b><font face="Arial">All four calipers stripped down, media
   blasted and sprayed red.&nbsp; Rear backplates removed, and painted.</font></b></p>
   <p align="left"><b><font face="Arial">All 4 discs and pads replaced and new
   fluid bled through.</font></b></p>
-  <p align="left"><img border="0" src="img/driversfrontcaliper.JPG" width="363" height="271"><b><font face="Arial">&nbsp;
-  <img border="0" src="img/driversrearcomplete.JPG" width="365" height="275"></font></b></p>
-  <p align="left"><img border="0" src="img/painteddriversreardisc.JPG" width="359" height="269">&nbsp;
-  <img border="0" src="img/painteddriversreardisc2.JPG" width="351" height="270"></p>
+  <p align="left"><img border="0" src="img/driversfrontcaliper.jpg" width="363" height="271"><b><font face="Arial">&nbsp;
+  <img border="0" src="img/driversrearcomplete.jpg" width="365" height="275"></font></b></p>
+  <p align="left"><img border="0" src="img/painteddriversreardisc.jpg" width="359" height="269">&nbsp;
+  <img border="0" src="img/painteddriversreardisc2.jpg" width="351" height="270"></p>
   <p align="left"><font face="Arial"><b>New battery installed £100!!!&nbsp; And
   new connectors.</b></font></p>
-  <p align="center"><img border="0" src="img/newbattery1.JPG" width="477" height="360"></p>
+  <p align="center"><img border="0" src="img/newbattery1.jpg" width="477" height="360"></p>
   <p align="center"><font face="Arial"><b>Rear EVAP tray stripped, media blasted
   and powder coated black.&nbsp; Including x member.</b></font></p>
-  <p align="center"><img border="0" src="img/evaptray1.JPG" width="366" height="270">&nbsp;
-  <img border="0" src="img/blackevaptray3.JPG" width="351" height="271"></p>
+  <p align="center"><img border="0" src="img/evaptray1.jpg" width="366" height="270">&nbsp;
+  <img border="0" src="img/blackevaptray3.jpg" width="351" height="271"></p>
   <p align="center"><font face="Arial"><b>Fuel tank stripped, painted and sender
   replaced.</b></font></p>
-  <p align="center"><img border="0" src="img/preppedfueltank2.JPG" width="362" height="275">
-  <img border="0" src="img/tankinshed1.JPG" width="320" height="427"></p>
-  <p align="center"><img border="0" src="img/fuellevelsender2.JPG" width="381" height="285"></p>
+  <p align="center"><img border="0" src="img/preppedfueltank2.jpg" width="362" height="275">
+  <img border="0" src="img/tankinshed1.jpg" width="320" height="427"></p>
+  <p align="center"><img border="0" src="img/fuellevelsender2.jpg" width="381" height="285"></p>
   <p align="center"><b><font face="Arial">Including filler pipes</font></b></p>
-  <p align="center"><img border="0" src="img/fuelfillerpipesin2.JPG" width="244" height="323">&nbsp;
-  <img border="0" src="img/fuelfillerpipesin3.JPG" width="353" height="268"></p>
+  <p align="center"><img border="0" src="img/fuelfillerpipesin2.jpg" width="244" height="323">&nbsp;
+  <img border="0" src="img/fuelfillerpipesin3.jpg" width="353" height="268"></p>
   <p align="center"><font face="Arial"><b>Dents in boot lid repaired by
   DENTSPEED</b></font></p>
-  <p align="center"><img border="0" src="img/dentspeed2.JPG" width="471" height="354"></p>
+  <p align="center"><img border="0" src="img/dentspeed2.jpg" width="471" height="354"></p>
   <p align="center"><font face="Arial"><b>Door handles removed and reinforced
   (common weak point)</b></font></p>
-  <p align="center"><img border="0" src="img/doorhandlerepair1.JPG" width="379" height="282">
-  <img border="0" src="img/doorhandlerepair2.JPG" width="378" height="283"></p>
+  <p align="center"><img border="0" src="img/doorhandlerepair1.jpg" width="379" height="282">
+  <img border="0" src="img/doorhandlerepair2.jpg" width="378" height="283"></p>
   <p align="center"><font face="Arial"><b>Blend door repair completed</b></font></p>
-  <p align="center"><img border="0" src="img/P1020973.JPG" width="360" height="274">
-  <img border="0" src="img/P1020976.JPG" width="363" height="275"></p>
+  <p align="center"><img border="0" src="img/P1020973.jpg" width="360" height="274">
+  <img border="0" src="img/P1020976.jpg" width="363" height="275"></p>
   <p align="center"><b><font face="Arial">Lighting rewired so brake interlock
   and auto release handbrake will work&nbsp;</font></b></p>
-  <p align="center"><img border="0" src="img/indicatorresistor2.JPG" width="360" height="270">
+  <p align="center"><img border="0" src="img/indicatorresistor2.jpg" width="360" height="270">
   <img border="0" src="img/eurolightandbackupconversion.jpg" width="410" height="271"></p>
   <p align="center"><font face="Arial"><b>Rear shock mounts fabricated</b></font></p>
-  <p align="center"><img border="0" src="img/newbushes.JPG" width="352" height="268">
-  <img border="0" src="img/damperreplaced.JPG" width="359" height="267"></p>
-  <p align="center"><img border="0" src="img/redshocker1.JPG" width="252" height="338"></p>
+  <p align="center"><img border="0" src="img/newbushes.jpg" width="352" height="268">
+  <img border="0" src="img/damperreplaced.jpg" width="359" height="267"></p>
+  <p align="center"><img border="0" src="img/redshocker1.jpg" width="252" height="338"></p>
   <p align="left"><font face="Arial"><b>Cruise switch recall done (car
   photographed at Ford!)</b></font></p>
-  <p align="center"><img border="0" src="img/lincolnrecall1.JPG" width="509" height="385"></p>
+  <p align="center"><img border="0" src="img/lincolnrecall1.jpg" width="509" height="385"></p>
 </blockquote>
 
 <p align="center"><font face="Arial"><b>Ford factory scan tool imported from the
@@ -92,27 +92,27 @@ states (New generation Star Tester - NGS)</b></font></p>
 <p align="center"><img border="0" src="img/ngstester.jpg" width="410" height="310"></p>
 <p align="center"><font face="Arial"><b>Here it is in use picking up a fault
 code (cured)</b></font></p>
-<p align="center"><img border="0" src="img/startester1.JPG" width="498" height="371"></p>
+<p align="center"><img border="0" src="img/startester1.jpg" width="498" height="371"></p>
 <p align="center"><b><font face="Arial">Front drop links changed (old ones were
 okay but gaiters were split)</font></b></p>
-<p align="center"><img border="0" src="img/olddroplink.JPG" width="346" height="262">
-<img border="0" src="img/droplinksandfrontbrakepads.JPG" width="347" height="259"></p>
+<p align="center"><img border="0" src="img/olddroplink.jpg" width="346" height="262">
+<img border="0" src="img/droplinksandfrontbrakepads.jpg" width="347" height="259"></p>
 <p align="center"><font face="Arial"><b>Rare parts imported from the states just
 in case!&nbsp; eg All ABS sensors and coil packs</b></font></p>
 
 <p align="center"><font face="Arial"><b>Official BIG service manuals imported
 from the States, including all wiring and vacuum diagrams.</b></font></p>
 
-<p align="center"><img border="0" src="img/manual%202.JPG" width="323" height="239">
-<img border="0" src="img/manual%203.JPG" width="323" height="240"></p>
+<p align="center"><img border="0" src="img/manual%202.jpg" width="323" height="239">
+<img border="0" src="img/manual%203.jpg" width="323" height="240"></p>
 
 <p align="center"><font face="Arial"><b>Blend door broken arm fault fixed
 (common mark 8 fault)</b></font></p>
 
-<p align="center"><img border="0" src="img/P1020974.JPG" width="335" height="255">
-<img border="0" src="img/P1020976.JPG" width="335" height="252"></p>
+<p align="center"><img border="0" src="img/P1020974.jpg" width="335" height="255">
+<img border="0" src="img/P1020976.jpg" width="335" height="252"></p>
 
-<p align="center"><img border="0" src="img/P1020972.JPG" width="466" height="349"></p>
+<p align="center"><img border="0" src="img/P1020972.jpg" width="466" height="349"></p>
 
 <p align="center"><font face="Arial"><b>Oscilloscope waveforms taken of most
 engine sensors.&nbsp; Heres the coils and injectors for example</b></font></p>
