--- a/londonzsinspection.html
+++ b/londonzsinspection.html
@@ -19,9 +19,9 @@
 in Essex.</font></b></p>
 <p><b><font face="Arial" color="#FFFF00">Hope he doesn't mind me using his
 original ad photos!&nbsp; Sorry Lennie!</font><font face="Arial" color="#FFFF00">&nbsp;</font></b></p>
-<p align="center"><img border="0" src="img/T2eC16ZHJIQE9qUHuEgnBRsILsKc348_80.JPG" width="542" height="406"></p>
-<p align="center"><img border="0" src="img/T2eC16FHJFoE9nh6n6FBRsILWws-48_80.JPG" width="542" height="406"></p>
-<p align="center"><img border="0" src="img/dashwhenbought.JPG" width="541" height="406"></p>
+<p align="center"><img border="0" src="img/T2eC16ZHJIQE9qUHuEgnBRsILsKc348_80.jpg" width="542" height="406"></p>
+<p align="center"><img border="0" src="img/T2eC16FHJFoE9nh6n6FBRsILWws-48_80.jpg" width="542" height="406"></p>
+<p align="center"><img border="0" src="img/dashwhenbought.jpg" width="541" height="406"></p>
 <p align="left"><font face="Arial"><b>I was in the middle of a huge american
 custom station wagon project and was driving my late dad's 2006 Toyota yaris -
 boring!&nbsp; And needed a &quot;fix!&quot;</b></font></p>
@@ -43,10 +43,10 @@ age shouldn't be driving it - it was embarrassing for him!&nbsp; But I didn't
 care, it was fantastic fun to drive.</b></font></p>
 <p align="left"><font face="Arial"><b>Here it is outside the house for the first
 time</b></font></p>
-<p align="center"><img border="0" src="img/P1030825.JPG" width="403" height="298"> <img border="0" src="img/P1030826.JPG" width="397" height="298"></p>
+<p align="center"><img border="0" src="img/P1030825.jpg" width="403" height="298"> <img border="0" src="img/P1030826.jpg" width="397" height="298"></p>
 <p align="left"><font face="Arial"><b>Interesting writing around the car</b></font></p>
-<p align="center"><img border="0" src="img/P1030856.JPG" width="392" height="521"> <img border="0" src="img/P1030857.JPG" width="425" height="320"></p>
-<p align="center"><img border="0" src="img/P1030858.JPG" width="420" height="314"></p>
+<p align="center"><img border="0" src="img/P1030856.jpg" width="392" height="521"> <img border="0" src="img/P1030857.jpg" width="425" height="320"></p>
+<p align="center"><img border="0" src="img/P1030858.jpg" width="420" height="314"></p>
 <p align="left"><font face="Arial"><b>Now since I teach maths to 11 to 18 year
 olds and intend to use the car to get to work, some of&nbsp; these may not be
 appropriate (but still funny) so i took a decision to remove them all rather
@@ -77,7 +77,7 @@ apparent (the more there is the better!!)</b></font></p>
     <p align="left"><font face="Arial"><b>Front left lower wishbone rear bush
     seriously split</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/P1040229.JPG" width="477" height="357"></p>
+<p align="center"><img border="0" src="img/P1040229.jpg" width="477" height="357"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>Rear wiper blade split</b></font></li>
@@ -86,7 +86,7 @@ apparent (the more there is the better!!)</b></font></p>
   <li>
     <p align="left"><font face="Arial"><b>pollen filter clogged up</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/P1040308.JPG" width="543" height="406"></p>
+<p align="center"><img border="0" src="img/P1040308.jpg" width="543" height="406"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>Gauges blue LED illumination poor (one
@@ -103,7 +103,7 @@ apparent (the more there is the better!!)</b></font></p>
     <p align="left"><font face="Arial"><b>DVD function on flip out stereo not
     working (pink wire not earthed)</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/P1040335.JPG" width="501" height="373"></p>
+<p align="center"><img border="0" src="img/P1040335.jpg" width="501" height="373"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>Stereo wiring needs tidying although
@@ -122,7 +122,7 @@ apparent (the more there is the better!!)</b></font></p>
     <p align="left"><font face="Arial"><b>Loads of debris/mud lodged in base of
     wing behind front wheel - this is what came out</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/P1040220.JPG" width="489" height="364"></p>
+<p align="center"><img border="0" src="img/P1040220.jpg" width="489" height="364"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>Worn out front discs and pads (see
@@ -179,7 +179,7 @@ apparent (the more there is the better!!)</b></font></p>
     <p align="left"><font face="Arial"><b>Looks like someone has levered the
     door frame on each side and bent them</b></font></li>
 </ul>
-    <p align="center">&nbsp;<img border="0" src="img/P1030882.JPG" width="330" height="431">
+    <p align="center">&nbsp;<img border="0" src="img/P1030882.jpg" width="330" height="431">
 <p align="left"><font face="Arial"><b>Now dont get me wrong here, the car was
 easily driveable.&nbsp; But i am a perfectionist when it comes to
 restoring/building cars, so anything slightly wrong will be put right.</b></font></p>
