--- a/londonzsresto2.html
+++ b/londonzsresto2.html
@@ -14,56 +14,56 @@
 <p><font face="Arial"><b>Drivers door handle rubbed down and sprayed with the
 correct colour and each rear side window button (3 on each side) prepped and sprayed gloss black
 and lacquered.</b></font></p>
-<p><img border="0" src="img/P1030891.JPG" width="283" height="371"><font face="Arial"><b>
-<img border="0" src="img/P1030898.JPG" width="389" height="289"></b></font></p>
-<p><img border="0" src="img/P1040129.JPG" width="408" height="305"></p>
+<p><img border="0" src="img/P1030891.jpg" width="283" height="371"><font face="Arial"><b>
+<img border="0" src="img/P1030898.jpg" width="389" height="289"></b></font></p>
+<p><img border="0" src="img/P1040129.jpg" width="408" height="305"></p>
 <p><font face="Arial"><b>Steering wheel removed and worn blue areas re-dyed
 black.&nbsp;</b></font></p>
-<p><img border="0" src="img/P1040108.JPG" width="330" height="248">  <img border="0" src="img/P1040110.JPG" width="325" height="247"></p>
-<p align="center"><img border="0" src="img/P1040112.JPG" width="421" height="315"></p>
+<p><img border="0" src="img/P1040108.jpg" width="330" height="248">  <img border="0" src="img/P1040110.jpg" width="325" height="247"></p>
+<p align="center"><img border="0" src="img/P1040112.jpg" width="421" height="315"></p>
 <p align="center"><font face="Arial"><b>The saggy rear parcel shelf was removed
 and a plywood section cut and bonded and painted black to the underside of the
 tray and an aluminium tube bonded to the hinges to keep it all straight</b></font></p>
-<p align="center"><img border="0" src="img/P1040123.JPG" width="333" height="248"> <img border="0" src="img/P1040133.JPG" width="333" height="249"></p>
+<p align="center"><img border="0" src="img/P1040123.jpg" width="333" height="248"> <img border="0" src="img/P1040133.jpg" width="333" height="249"></p>
 <p align="center"><font face="Arial"><b>Speakers rewired and routed along the
 back</b></font></p>
 <p align="center"><font face="Arial"><b>Wiring to rear amp rerouted and secured
 down.&nbsp; Here's a before and after photo</b></font></p>
-<p align="center"><img border="0" src="img/P1040118.JPG" width="308" height="227"> <img border="0" src="img/P1040121.JPG" width="300" height="226"></p>
-<p align="center"><img border="0" src="img/P1040119.JPG" width="321" height="242"> <img border="0" src="img/P1040122.JPG" width="321" height="241"></p>
+<p align="center"><img border="0" src="img/P1040118.jpg" width="308" height="227"> <img border="0" src="img/P1040121.jpg" width="300" height="226"></p>
+<p align="center"><img border="0" src="img/P1040119.jpg" width="321" height="242"> <img border="0" src="img/P1040122.jpg" width="321" height="241"></p>
 <p align="center"><font face="Arial"><b>The rear spoiler extension vibrates
 around quite a bit, so I cobbled together a temporary support made from a rod
 and 2 strong suckers.&nbsp; Must remember not to use the rear wiper!</b></font></p>
 <p align="center"><font face="Arial"><b>The lexus rear tail lights look good,
 but the RH one has bulb melting damage and really is no good.&nbsp; So, a change
 to LED units is a good idea.&nbsp; At £120, they are not cheap, but look good</b></font></p>
-<p align="center"><img border="0" src="img/P1040146.JPG" width="356" height="267"></p>
+<p align="center"><img border="0" src="img/P1040146.jpg" width="356" height="267"></p>
 <p align="center"><font face="Arial"><b>Before and after photo</b></font></p>
-<p align="center"><img border="0" src="img/P1030827.JPG" width="327" height="244"> <img border="0" src="img/P1040148.JPG" width="326" height="245"></p>
+<p align="center"><img border="0" src="img/P1030827.jpg" width="327" height="244"> <img border="0" src="img/P1040148.jpg" width="326" height="245"></p>
 <p align="center"><font face="Arial"><b>Also I now have rewired the back lights
 so I have 2 reversing lights and 2 fog lights rather than just the one on each
 side.</b></font></p>
 <p align="center"><font face="Arial"><b>The back left tyre was a bit low and a B
 F Goodrich one, all the others are AUTOGRIP.&nbsp; So 1 ebay purchase later and
 I have another tyre.</b></font></p>
-<p align="center"><img border="0" src="img/P1040136.JPG" width="411" height="308"></p>
+<p align="center"><img border="0" src="img/P1040136.jpg" width="411" height="308"></p>
 <p align="center"><font face="Arial"><b>While each wheel is off I will remove
 the centre cap badges and paint them the same colour as the car</b></font></p>
-<p align="center"><img border="0" src="img/P1040255.JPG" width="411" height="310"></p>
+<p align="center"><img border="0" src="img/P1040255.jpg" width="411" height="310"></p>
 <p align="center"><font face="Arial"><b>The interior clock had no backlight
 illumination so was dismantled and a dry solder joint found and redone.&nbsp;
 Obviously someone in the past has changed all the interior lights to blue LED.</b></font></p>
-<p align="center"><img border="0" src="img/P1040300.JPG" width="386" height="287"></p>
+<p align="center"><img border="0" src="img/P1040300.jpg" width="386" height="287"></p>
 <p align="center"><font face="Arial"><b>The front right spotlight in the bumper
 was corroded internally, so found 2 on ebay for £15</b></font></p>
-<p align="center"><img border="0" src="img/P1040113.JPG" width="422" height="317"></p>
+<p align="center"><img border="0" src="img/P1040113.jpg" width="422" height="317"></p>
 <p align="center"><font face="Arial"><b>On my wish list is a leather interior,
 and I found one in Stafford!&nbsp; Fitted...</b></font></p>
-<p align="center"><img border="0" src="img/P1040406.JPG" width="360" height="270"> <img border="0" src="img/P1040402.JPG" width="357" height="269"></p>
+<p align="center"><img border="0" src="img/P1040406.jpg" width="360" height="270"> <img border="0" src="img/P1040402.jpg" width="357" height="269"></p>
 <p align="center"><font face="Arial"><b>There's a bracket holding the FPR to the
 passenger strut tower that wasn't quite right, so a new one was fabbed and
 fitted</b></font></p>
-<p align="center"><img border="0" src="img/P1030901.JPG" width="365" height="278"> <img border="0" src="img/P1030902.JPG" width="366" height="278"></p>
+<p align="center"><img border="0" src="img/P1030901.jpg" width="365" height="278"> <img border="0" src="img/P1030902.jpg" width="366" height="278"></p>
 <p align="center"><font face="Arial"><b><a href="londonzsresto3.html">Click here
 for heater and AC</a></b></font></p>
 <p>&nbsp;</p>
