--- a/pimpedvan.html
+++ b/pimpedvan.html
@@ -20,8 +20,8 @@
     our trailer tent and caravan.</b></font></li>
   <li><font face="Arial"><b>It had already been built but was suffering badly.</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/2007_0102_142508AA.JPG" width="330" height="440">
-<img border="0" src="img/2007_0102_142532AA.JPG" width="430" height="323"></p>
+<p align="center"><img border="0" src="img/2007_0102_142508AA.jpg" width="330" height="440">
+<img border="0" src="img/2007_0102_142532AA.jpg" width="430" height="323"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>Over the next couple of years, I
@@ -54,18 +54,18 @@
 <p align="center"><font face="Arial"><b>Here's a quick photo sequence to show
 its progress and evolution</b></font></p>
 <p align="center"><img border="0" src="img/71_1.jpg" width="366" height="273">
-<img border="0" src="img/2007_0420_201343AA.JPG" width="368" height="273"></p>
-<p align="center"><img border="0" src="img/crackedwindscreen.JPG" width="370" height="277">
-<img border="0" src="img/DSCF0060.JPG" width="369" height="276"></p>
-<p align="center"><img border="0" src="img/2008_0703_170549AA.JPG" width="408" height="306">
-<img border="0" src="img/2008_0705_153320AA.JPG" width="407" height="306"></p>
-<p align="center"><img border="0" src="img/2007_0404_092911AA.JPG" width="400" height="304">
-<img border="0" src="img/2008_0725_155902AA.JPG" width="355" height="268">
+<img border="0" src="img/2007_0420_201343AA.jpg" width="368" height="273"></p>
+<p align="center"><img border="0" src="img/crackedwindscreen.jpg" width="370" height="277">
+<img border="0" src="img/DSCF0060.jpg" width="369" height="276"></p>
+<p align="center"><img border="0" src="img/2008_0703_170549AA.jpg" width="408" height="306">
+<img border="0" src="img/2008_0705_153320AA.jpg" width="407" height="306"></p>
+<p align="center"><img border="0" src="img/2007_0404_092911AA.jpg" width="400" height="304">
+<img border="0" src="img/2008_0725_155902AA.jpg" width="355" height="268">
 </p>
-<p align="center"><img border="0" src="img/2008_1116_124142AA.JPG" width="421" height="318">&nbsp;
-<img border="0" src="img/2009_0501_181133AA.JPG" width="424" height="318"></p>
-<p align="center"><img border="0" src="img/2009_0502_115748AA.JPG" width="640" height="480"></p>
-<p align="center"><img border="0" src="img/2009_0501_181142AA.JPG" width="640" height="480"></p>
+<p align="center"><img border="0" src="img/2008_1116_124142AA.jpg" width="421" height="318">&nbsp;
+<img border="0" src="img/2009_0501_181133AA.jpg" width="424" height="318"></p>
+<p align="center"><img border="0" src="img/2009_0502_115748AA.jpg" width="640" height="480"></p>
+<p align="center"><img border="0" src="img/2009_0501_181142AA.jpg" width="640" height="480"></p>
 <p align="center">&nbsp;</p>
 <p align="left">&nbsp;</p>
 
