--- a/rscamaro.html
+++ b/rscamaro.html
@@ -26,36 +26,36 @@
   <li><font face="Arial"><b>The gearbox that used to be in it was a T5 but was
     removed to use in a Cobra Kit car.</b></font></li>
 </ul>
-<p><img border="0" src="img/2002_0105_100911AA.JPG" width="404" height="306">
-<img border="0" src="img/2001_1231_110510AA.JPG" width="413" height="307"></p>
-<p><img border="0" src="img/2001_1231_105731AA.JPG" width="407" height="305">
-<img border="0" src="img/2002_0127_101826AA.JPG" width="406" height="305"></p>
-<p><img border="0" src="img/2001_1231_110631AA.JPG" width="409" height="313">
-<img border="0" src="img/2002_0127_101746AA.JPG" width="418" height="313"></p>
+<p><img border="0" src="img/2002_0105_100911AA.jpg" width="404" height="306">
+<img border="0" src="img/2001_1231_110510AA.jpg" width="413" height="307"></p>
+<p><img border="0" src="img/2001_1231_105731AA.jpg" width="407" height="305">
+<img border="0" src="img/2002_0127_101826AA.jpg" width="406" height="305"></p>
+<p><img border="0" src="img/2001_1231_110631AA.jpg" width="409" height="313">
+<img border="0" src="img/2002_0127_101746AA.jpg" width="418" height="313"></p>
 <ul>
   <li><b><font face="Arial">No engine, no gearbox, no propshaft, no interior,
     crumpled front right corner and missing wheels.</font></b></li>
   <li><b><font face="Arial">Eventually fitted a 350 V8 out of this pickup truck</font></b></li>
 </ul>
-<p><img border="0" src="img/2002_0207_131559AA.JPG" width="415" height="313">
-<img border="0" src="img/2002_0207_131624AA.JPG" width="422" height="313"></p>
+<p><img border="0" src="img/2002_0207_131559AA.jpg" width="415" height="313">
+<img border="0" src="img/2002_0207_131624AA.jpg" width="422" height="313"></p>
 <ul>
   <li><font face="Arial"><b>During the build</b></font></li>
 </ul>
-<p><img border="0" src="img/2002_0417_192108AA.JPG" width="419" height="315"> <img border="0" src="img/2002_0331_115420AA.JPG" width="422" height="316"></p>
-<p><img border="0" src="img/2002_0804_123138AA.JPG" width="414" height="309"> <img border="0" src="img/2002_0804_124724AA.JPG" width="415" height="308"></p>
-<p><img border="0" src="img/2002_0421_160429AA.JPG" width="421" height="308">  <img border="0" src="img/2002_0411_185335AA.JPG" width="418" height="308"></p>
-<p><img border="0" src="img/2002_0413_163417AA.JPG" width="415" height="313"> <img border="0" src="img/2002_1007_161409AA.JPG" width="419" height="313"></p>
-<p><img border="0" src="img/2004_0928_160931AA.JPG" width="417" height="315"> <img border="0" src="img/2002_0821_173045AA.JPG" width="414" height="314"></p>
+<p><img border="0" src="img/2002_0417_192108AA.jpg" width="419" height="315"> <img border="0" src="img/2002_0331_115420AA.jpg" width="422" height="316"></p>
+<p><img border="0" src="img/2002_0804_123138AA.jpg" width="414" height="309"> <img border="0" src="img/2002_0804_124724AA.jpg" width="415" height="308"></p>
+<p><img border="0" src="img/2002_0421_160429AA.jpg" width="421" height="308">  <img border="0" src="img/2002_0411_185335AA.jpg" width="418" height="308"></p>
+<p><img border="0" src="img/2002_0413_163417AA.jpg" width="415" height="313"> <img border="0" src="img/2002_1007_161409AA.jpg" width="419" height="313"></p>
+<p><img border="0" src="img/2004_0928_160931AA.jpg" width="417" height="315"> <img border="0" src="img/2002_0821_173045AA.jpg" width="414" height="314"></p>
 <ul>
   <li><b><font face="Arial">Turned into this</font></b></li>
 </ul>
-<p><img border="0" src="img/2002_1122_211924AA.JPG" width="418" height="314">
-<img border="0" src="img/2004_0928_182618AA.JPG" width="416" height="315"></p>
-<p><img border="0" src="img/2005_0407_125139AA.JPG" width="421" height="314">
-<img border="0" src="img/2005_0508_142943AA.JPG" width="417" height="314"></p>
-<p><img border="0" src="img/2005_0508_142831AA.JPG" width="420" height="315">
-<img border="0" src="img/2005_0823_121956AA.JPG" width="421" height="317"></p>
+<p><img border="0" src="img/2002_1122_211924AA.jpg" width="418" height="314">
+<img border="0" src="img/2004_0928_182618AA.jpg" width="416" height="315"></p>
+<p><img border="0" src="img/2005_0407_125139AA.jpg" width="421" height="314">
+<img border="0" src="img/2005_0508_142943AA.jpg" width="417" height="314"></p>
+<p><img border="0" src="img/2005_0508_142831AA.jpg" width="420" height="315">
+<img border="0" src="img/2005_0823_121956AA.jpg" width="421" height="317"></p>
 
 </body>
 
