--- a/showcamaro.html
+++ b/showcamaro.html
@@ -39,19 +39,19 @@
     was turned into an air suspensioned lowrider with custom wheels and a custom
     flamed airbrushed paint scheme.</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/2002_0828_140958AA.JPG" width="495" height="373"></p>
-<p align="center"><img border="0" src="img/airbrush10.JPG" width="493" height="371"></p>
+<p align="center"><img border="0" src="img/2002_0828_140958AA.jpg" width="495" height="373"></p>
+<p align="center"><img border="0" src="img/airbrush10.jpg" width="493" height="371"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>Everything that could be chromed was!</b></font></li>
 </ul>
-<p align="center"><img border="0" src="img/DSCF0131.JPG" width="489" height="365"></p>
-<p align="center"><img border="0" src="img/2003_0910_154028AA.JPG" width="357" height="266">
-<img border="0" src="img/2003_1229_204929AA.JPG" width="352" height="266"></p>
+<p align="center"><img border="0" src="img/DSCF0131.jpg" width="489" height="365"></p>
+<p align="center"><img border="0" src="img/2003_0910_154028AA.jpg" width="357" height="266">
+<img border="0" src="img/2003_1229_204929AA.jpg" width="352" height="266"></p>
 <p align="center"><img border="0" src="img/airsuspensionsolenoids.jpg" width="381" height="285">
-<img border="0" src="img/2008_0927_102015AA.JPG" width="389" height="285"></p>
-<p align="center"><img border="0" src="img/2009_0605_151550AA.JPG" width="412" height="308">
-<img border="0" src="img/stance1.JPG" width="416" height="308"></p>
+<img border="0" src="img/2008_0927_102015AA.jpg" width="389" height="285"></p>
+<p align="center"><img border="0" src="img/2009_0605_151550AA.jpg" width="412" height="308">
+<img border="0" src="img/stance1.jpg" width="416" height="308"></p>
 <p align="center"><img border="0" src="img/camaroatnewarkofficialphoto.jpg" width="720" height="480"></p>
 
 </body>
