--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@ over the years</font></b></p>
 
 
 <p align="center"><a href="showcamaro.html"><img border="0" src="img/camaroatnewarkofficialphoto.jpg" width="383" height="259"></a>&nbsp;
-<a href="rscamaro.html"><img border="0" src="img/2005_0508_142831AA.JPG" width="341" height="260"></a></p>
+<a href="rscamaro.html"><img border="0" src="img/2005_0508_142831AA.jpg" width="341" height="260"></a></p>
 <p align="center"><a href="countrysquire.html"><img border="0" src="img/ford2.jpg" width="375" height="265"></a>
-<a href="lincolnmark8.html"><img border="0" src="img/29sept20112.JPG" width="356" height="265"></a></p>
+<a href="lincolnmark8.html"><img border="0" src="img/29sept20112.jpg" width="356" height="265"></a></p>
 
-<p align="center"><a href="pimpedvan.html"><img border="0" src="img/2009_0502_115748AA.JPG" width="396" height="297"></a>
+<p align="center"><a href="pimpedvan.html"><img border="0" src="img/2009_0502_115748AA.jpg" width="396" height="297"></a>
 <a href="transam.html"><img border="0" src="img/transam4.jpg" width="408" height="299"></a></p>
 
 <p align="center"><a href="cobra.html"><img border="0" src="img/Scan6.jpg" width="585" height="408"></a></p>
 
-<p align="center"><a href="londonzsinspection.html"><img border="0" src="img/P1040290.JPG" width="410" height="312"></a>&nbsp;
-<a href="crazysaxo.html"><img border="0" src="img/one.JPG" width="420" height="312"></a></p>
+<p align="center"><a href="londonzsinspection.html"><img border="0" src="img/P1040290.jpg" width="410" height="312"></a>&nbsp;
+<a href="crazysaxo.html"><img border="0" src="img/one.jpg" width="420" height="312"></a></p>
 
 <p align="center">&nbsp;</p>
 <p align="center"><a href="modifiedhonda.html"><img border="0" src="img/KGrHqUOKo4FJgvnYFIeBSbSyUBSu60_58.jpg" width="640" height="478"></a></p>
