--- a/countrysquire.html
+++ b/countrysquire.html
@@ -35,7 +35,7 @@
     <p align="left"><font face="Arial"><b>This has been a frame off restoration</b></font></li>
 </ul>
 <p align="center"><img border="0" src="img/newframe2.jpg" width="538" height="402"></p>
-<p align="center"><font face="Arial" size="6">Click <a href="www.lowcamaro.com/Project-Big-Ford-pdf-version-part-1.pdf">HERE</a>
+<p align="center"><font face="Arial" size="6">Click <a href="http://lowcamaro.com/Project-Big-Ford-pdf-version-part-1.pdf">HERE</a>
 for the diary of the build</font></p>
 
 </body>
